src/objects/Thing__c.object
<CustomObject>
    <fields>
        <fullName>Array__c</fullName>
        <label>Array</label>
        <referenceTo>Array__c</referenceTo>
        <relationshipLabel>Things</relationshipLabel>
        <relationshipName>Things</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <inlineHelpText>The manufacturer type for translation purposes</inlineHelpText>
        <label>Component Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thing_Address__c</fullName>
        <inlineHelpText>The name of the Thing. This must be unique and is referenced by the remote Things when calling into Chatty 2.0</inlineHelpText>
        <label>Thing Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thing_Type__c</fullName>
        <inlineHelpText>What type of Thing is this? Digital Things can be on or off. Analog Things provide reading or output based on Chatty commands.</inlineHelpText>
        <label>Thing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analog</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Thing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Thing_Address__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Thing-{00000000}</displayFormat>
        <label>Thing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Things</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>